# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "kungfu"
version = "0.0.0"
description = "Kungfu Core Library"
license = "Apache-2.0"
authors = ["Kungfu Trader <info@kungfu.link>"]
homepage = "https://www.kungfu-trader.com"
repository = "https://github.com/kungfu-trader/kungfu.git"
packages = [
    { include = "kungfu", from = "src/python" },
]

[tool.poetry.dependencies]
python = "~3.9"

#### Compiler #############################################
black = "~23.3.0"
nuitka = "~1.5.0"
pdm = "~2.5.0"
pdm-pep517 = "~1.1.0"
poetry-core = "~1.5.0"
scons = "~4.5.0"
tomli-w = "~1.0.0"

#### Console ##############################################
click = "~8.1.0"
psutil = "~5.9.0"
tabulate = "~0.8.10"
wcmatch = "~8.0.0"

#### Numeric ##############################################
numpy = "~1.24.0"
pandas = "~2.0.0"
scipy = "~1.8.0"
statsmodels = "~0.13.5"
openpyxl = "~3.1.2"

#### Dependencies #########################################
chardet = "~5.1.0"
charset-normalizer = "~3.1.0"
msgpack = "~1.0.5"
filelock = "~3.12.0"
ordered-set = "~4.1.0"
pytest = "~7.1.0"
railroad-diagrams = "~2.0.0"

[tool.poetry.dev-dependencies]
conan = "~1.59.0"
pyinstaller = "~5.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
