# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "kungfu"
version = "0.0.0"
description = "Kungfu Core Library"
license = "Apache-2.0"
authors = ["Kungfu Trader <info@kungfu.link>"]
homepage = "https://www.kungfu-trader.com"
repository = "https://github.com/kungfu-trader/kungfu.git"
packages = [
    { include = "kungfu", from = "src/python" },
]

[tool.poetry.dependencies]
python = "~3.9"

#### Console ##############################################
click = "8.1.3"
psutil = "~5.9.0"
tabulate = "~0.8.10"
wcmatch = "~8.0.0"

#### Numeric ##############################################
numpy = "~1.24.0"
pandas = "~2.0.0"
scipy = "~1.8.0"
statsmodels = "~0.13.5"
openpyxl = "~3.1.2"

#### Dependencies #########################################
ordered-set = "~4.1.0"

[tool.poetry.dev-dependencies]
conan = "~1.60.0"
pyinstaller = "~5.10"

#### Compiler #############################################
black = "~23.3.0"
nuitka = "~1.5.0"
pdm = "~2.5.0"
pdm-pep517 = "~1.1.0"
poetry-core = "~1.7.0"
scons = "~4.5.0"
tomli-w = "~1.0.0"
tomlkit = "~0.12.3"

#### Dependencies #########################################
certifi = "~2023.7.22"
chardet = "~5.1.0"
charset-normalizer = "~3.3.2"
importlib-metadata = "~6.8.0"
msgpack = "~1.0.7"
filelock = "~3.13.1"
packaging = "~23.2"
platformdirs = "~3.11.0"
pluggy = "~1.3.0"
pytest = "~7.1.0"
railroad-diagrams = "~2.0.0"
shellingham = "~1.5.3"
zipp = "~3.17.0"

#### Sync Pipfile #########################################
setuptools = "68.2.2"
virtualenv = "20.24.4"
wheel = "0.41.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
