AUX_SOURCE_DIRECTORY(src/yijinjing/cache SOURCE_FILES_YJJ_CACHE)
AUX_SOURCE_DIRECTORY(src/yijinjing/journal SOURCE_FILES_YJJ_JOURNAL)
AUX_SOURCE_DIRECTORY(src/yijinjing/index SOURCE_FILES_YJJ_INDEX)
AUX_SOURCE_DIRECTORY(src/yijinjing/io SOURCE_FILES_YJJ_IO)
AUX_SOURCE_DIRECTORY(src/yijinjing/util SOURCE_FILES_YJJ_UTIL)
AUX_SOURCE_DIRECTORY(src/yijinjing/practice SOURCE_FILES_YJJ_PRACTICE)

AUX_SOURCE_DIRECTORY(src/wingchun/broker SOURCE_FILES_WC_BROKER)
AUX_SOURCE_DIRECTORY(src/wingchun/service SOURCE_FILES_WC_SERVICE)
AUX_SOURCE_DIRECTORY(src/wingchun/book SOURCE_FILES_WC_BOOK)
AUX_SOURCE_DIRECTORY(src/wingchun/strategy SOURCE_FILES_WC_STRATEGY)
AUX_SOURCE_DIRECTORY(src/wingchun/algo SOURCE_FILES_WC_ALGO)

ADD_LIBRARY(${PROJECT_NAME} SHARED
        ${SOURCE_FILES_YJJ_CACHE}
        ${SOURCE_FILES_YJJ_JOURNAL}
        ${SOURCE_FILES_YJJ_INDEX}
        ${SOURCE_FILES_YJJ_IO}
        ${SOURCE_FILES_YJJ_UTIL}
        ${SOURCE_FILES_YJJ_PRACTICE}
        ${SOURCE_FILES_WC_BROKER}
        ${SOURCE_FILES_WC_SERVICE}
        ${SOURCE_FILES_WC_BOOK}
        ${SOURCE_FILES_WC_STRATEGY}
        ${SOURCE_FILES_WC_ALGO}
        )
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CONAN_LIBS} sqlite3 nng)
