PROJECT(node_addons)

if(WIN32)
    SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS OFF)
    ADD_COMPILE_DEFINITIONS(V8_DEPRECATION_WARNINGS=1)
endif()

if(UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w")
    SET(CMAKE_CXX_FLAGS_DEBUG  "${CMAKE_CXX_FLAGS_DEBUG} -w")
endif()

############################################################
INCLUDE_DIRECTORIES(${CMAKE_JS_INC})

ADD_COMPILE_DEFINITIONS(NAPI_VERSION=3)
ADD_COMPILE_DEFINITIONS(NAPI_EXPERIMENTAL)

EXECUTE_PROCESS(COMMAND node -p "require('node-addon-api').include"
        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
        OUTPUT_VARIABLE NODE_ADDON_API_DIR
        )
STRING(REPLACE "\n" "" NODE_ADDON_API_DIR ${NODE_ADDON_API_DIR})
STRING(REPLACE "\"" "" NODE_ADDON_API_DIR ${NODE_ADDON_API_DIR})
INCLUDE_DIRECTORIES(${NODE_ADDON_API_DIR})

MESSAGE("-- Include node-js headers from ${CMAKE_JS_INC}")
MESSAGE("-- Include node-addon-api headers from ${NODE_ADDON_API_DIR}")

############################################################

AUX_SOURCE_DIRECTORY(src SOURCE_FILES_KUNGFU)
ADD_LIBRARY(node_kungfu SHARED ${SOURCE_FILES_KUNGFU} ${CMAKE_JS_SRC})
SET_TARGET_PROPERTIES(node_kungfu PROPERTIES PREFIX "" SUFFIX ".node")
TARGET_LINK_LIBRARIES(node_kungfu kungfu ${CMAKE_JS_LIB})
