PROJECT(kfext_ctp)

if(WIN32)
    SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS OFF)
endif()

AUX_SOURCE_DIRECTORY(src SOURCE_FILES)

SET(KF_EXTENSION_BUILD_DIR ${KF_EXTENSIONS_BUILD_DIR}/ctp)

IF(UNIX AND NOT APPLE)
    SET(CTP_API_VERSION v6.3.6_20160606)
    INCLUDE_DIRECTORIES(api/${CTP_API_VERSION}/include)
    LINK_DIRECTORIES(api/${CTP_API_VERSION}/lib)
ENDIF()

IF(WIN32)
    SET(CTP_API_VERSION 20150803_tradeapi_win64)
    INCLUDE_DIRECTORIES(api/${CTP_API_VERSION})
    LINK_DIRECTORIES(api/${CTP_API_VERSION})
ENDIF()

IF(NOT APPLE)
CONFIGURE_FILE(__init__.py "${KF_EXTENSION_BUILD_DIR}/__init__.py")
PYBIND11_ADD_MODULE(${PROJECT_NAME} SHARED ${SOURCE_FILES})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${KF_EXTENSION_BUILD_DIR})
ENDIF()

IF(UNIX AND NOT APPLE)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ctpthostmduserapi ctpthosttraderapi wingchun)
    FILE(COPY api/${CTP_API_VERSION}/lib/libctpthostmduserapi.so DESTINATION ${KF_EXTENSION_BUILD_DIR})
    FILE(COPY api/${CTP_API_VERSION}/lib/libctpthosttraderapi.so DESTINATION ${KF_EXTENSION_BUILD_DIR})
ENDIF()

IF(WIN32)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE thostmduserapi thosttraderapi wingchun)
    FILE(COPY api/${CTP_API_VERSION}/thosttraderapi.dll DESTINATION ${KF_EXTENSION_BUILD_DIR})
    FILE(COPY api/${CTP_API_VERSION}/thostmduserapi.dll DESTINATION ${KF_EXTENSION_BUILD_DIR})
ENDIF()
