PROJECT(kfext_ctp)

IF(UNIX)
    SET(CTP_API_VERSION v6.3.19_T1_20200423_api_tradeapi_se_linux64)
ENDIF()
IF(WIN32)
    SET(CTP_API_VERSION v6.3.19_T1_20200423_tradeapi64_se_windows)
    SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS OFF)
ENDIF()

SET(API_LIB_PATH ${PROJECT_SOURCE_DIR}/api/${CTP_API_VERSION}/lib)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/api/${CTP_API_VERSION}/include)
LINK_DIRECTORIES(${API_LIB_PATH})

AUX_SOURCE_DIRECTORY(src SOURCE_FILES)

SET(KF_EXTENSION_BUILD_DIR ${KF_EXTENSIONS_BUILD_DIR}/ctp)
SET(BUILD_OUTPUT_DIR ${PROJECT_BINARY_DIR}/build)

CONFIGURE_FILE(__init__.py ${BUILD_OUTPUT_DIR}/__init__.py)
CONFIGURE_FILE(package.json ${BUILD_OUTPUT_DIR}/package.json)

PYBIND11_ADD_MODULE(${PROJECT_NAME} SHARED ${SOURCE_FILES})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${BUILD_OUTPUT_DIR})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BUILD_OUTPUT_DIR})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BUILD_OUTPUT_DIR})

IF(UNIX)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE kungfu thostmduserapi_se thosttraderapi_se LinuxDataCollect)
ENDIF()
IF(WIN32)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE kungfu thostmduserapi_se thosttraderapi_se WinDataCollect)
ENDIF()

ADD_CUSTOM_TARGET(copy-ctp-api ALL COMMAND ${CMAKE_COMMAND} -E copy_directory ${API_LIB_PATH} ${KF_EXTENSION_BUILD_DIR} DEPENDS ${PROJECT_NAME})
ADD_CUSTOM_TARGET(copy-ctp-target ALL COMMAND ${CMAKE_COMMAND} -E copy_directory ${BUILD_OUTPUT_DIR} ${KF_EXTENSION_BUILD_DIR} DEPENDS ${PROJECT_NAME})
