PROJECT(kfext_tora)

if(WIN32)
    SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS OFF)
endif()

IF(NOT TORA_API_VERSION)
    SET(TORA_API_VERSION v3.8.4_20190404)
ENDIF()

INCLUDE_DIRECTORIES(api/${TORA_API_VERSION}/include)

IF(WIN32)
    LINK_DIRECTORIES(api/${TORA_API_VERSION}/lib/win64)
ENDIF()
IF(UNIX AND NOT APPLE)
    LINK_DIRECTORIES(api/${TORA_API_VERSION}/lib/linux64)
ENDIF()
#IF(APPLE)
#    LINK_DIRECTORIES(api/${TORA_API_VERSION}/lib/macosx)
#ENDIF()

AUX_SOURCE_DIRECTORY(src SOURCE_FILES)

SET(KF_EXTENSION_BUILD_DIR ${KF_EXTENSIONS_BUILD_DIR}/tora)

IF(NOT APPLE)
    CONFIGURE_FILE(__init__.py "${KF_EXTENSION_BUILD_DIR}/__init__.py")
    PYBIND11_ADD_MODULE(${PROJECT_NAME} SHARED ${SOURCE_FILES})
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${KF_EXTENSION_BUILD_DIR})
ENDIF()

IF(WIN32)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE fastmdapi mdapi fasttraderapi traderapi wingchun yijinjing)
    FILE(COPY api/${TORA_API_VERSION}/lib/win64/fastmdapi.dll DESTINATION ${KF_EXTENSION_BUILD_DIR})
    FILE(COPY api/${TORA_API_VERSION}/lib/win64/fastmdapi.lib DESTINATION ${KF_EXTENSION_BUILD_DIR})
    FILE(COPY api/${TORA_API_VERSION}/lib/win64/mdapi.dll DESTINATION ${KF_EXTENSION_BUILD_DIR})
    FILE(COPY api/${TORA_API_VERSION}/lib/win64/mdapi.lib DESTINATION ${KF_EXTENSION_BUILD_DIR})
    FILE(COPY api/${TORA_API_VERSION}/lib/win64/fasttraderapi.dll DESTINATION ${KF_EXTENSION_BUILD_DIR})
    FILE(COPY api/${TORA_API_VERSION}/lib/win64/fasttraderapi.lib DESTINATION ${KF_EXTENSION_BUILD_DIR})
    FILE(COPY api/${TORA_API_VERSION}/lib/win64/traderapi.dll DESTINATION ${KF_EXTENSION_BUILD_DIR})
    FILE(COPY api/${TORA_API_VERSION}/lib/win64/traderapi.lib DESTINATION ${KF_EXTENSION_BUILD_DIR})
ENDIF()
IF(UNIX AND NOT APPLE)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE fastmdapi mdapi fasttraderapi traderapi wingchun yijinjing)
    FILE(COPY api/${TORA_API_VERSION}/lib/linux/libfastmdapi.so DESTINATION ${KF_EXTENSION_BUILD_DIR})
    FILE(COPY api/${TORA_API_VERSION}/lib/linux/libmdapi.so DESTINATION ${KF_EXTENSION_BUILD_DIR})
    FILE(COPY api/${TORA_API_VERSION}/lib/linux/libfasttraderapi.so DESTINATION ${KF_EXTENSION_BUILD_DIR})
    FILE(COPY api/${TORA_API_VERSION}/lib/linux/libtraderapi.so DESTINATION ${KF_EXTENSION_BUILD_DIR})
ENDIF()
#IF(APPLE)
#    TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE xtptraderapi xtpquoteapi wingchun yijinjing)
#    FILE(COPY api/${TORA_API_VERSION}/lib/macosx/libxtpquoteapi.dylib DESTINATION ${KF_EXTENSION_BUILD_DIR})
#    FILE(COPY api/${TORA_API_VERSION}/lib/macosx/libxtptraderapi.dylib DESTINATION ${KF_EXTENSION_BUILD_DIR})
#ENDIF()
