PROJECT(kfext_xtp)

if(WIN32)
    SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS OFF)
endif()

IF(NOT XTP_API_VERSION)
    SET(XTP_API_VERSION 1.1.19.2)
ENDIF()

IF(WIN32)
    SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS OFF)
    SET(API_LIB_PATH ${PROJECT_SOURCE_DIR}/api/${XTP_API_VERSION}/lib/win64/dll)
ENDIF()
IF(UNIX AND NOT APPLE)
    SET(API_LIB_PATH ${PROJECT_SOURCE_DIR}/api/${XTP_API_VERSION}/lib/linux_centos7)
ENDIF()
IF(APPLE)
    SET(XTP_API_VERSION 1.1.18.13)
    SET(API_LIB_PATH ${PROJECT_SOURCE_DIR}/api/${XTP_API_VERSION}/lib/macosx)
ENDIF()

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/api/${XTP_API_VERSION}/include)
LINK_DIRECTORIES(${API_LIB_PATH})

AUX_SOURCE_DIRECTORY(src SOURCE_FILES)

SET(KF_EXTENSION_BUILD_DIR ${KF_EXTENSIONS_BUILD_DIR}/xtp)
SET(BUILD_OUTPUT_DIR ${PROJECT_BINARY_DIR}/build)

CONFIGURE_FILE(__init__.py ${BUILD_OUTPUT_DIR}/__init__.py)
CONFIGURE_FILE(package.json ${BUILD_OUTPUT_DIR}/package.json)

PYBIND11_ADD_MODULE(${PROJECT_NAME} SHARED ${SOURCE_FILES})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${BUILD_OUTPUT_DIR})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BUILD_OUTPUT_DIR})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BUILD_OUTPUT_DIR})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE kungfu xtptraderapi xtpquoteapi)

ADD_CUSTOM_TARGET(copy-xtp-api ALL COMMAND ${CMAKE_COMMAND} -E copy_directory ${API_LIB_PATH} ${KF_EXTENSION_BUILD_DIR} DEPENDS ${PROJECT_NAME})
ADD_CUSTOM_TARGET(copy-xtp-target ALL COMMAND ${CMAKE_COMMAND} -E copy_directory ${BUILD_OUTPUT_DIR} ${KF_EXTENSION_BUILD_DIR} DEPENDS ${PROJECT_NAME})
